# ros_template_programs

./: CMakeLists.txt  README.md  nodelet_description.xml  package.xml
launch/: action_template.launch  action_template_py.launch  service_template.launch  service_template_py.launch  topic_template.launch  topic_template_nodelet.launch  topic_template_py.launch
scripts/: action_client_template.py  action_server_template.py  service_client_template.py  service_server_template.py  topic_publisher_template.py  topic_subscriber_template.py
src/: action_client_template.cpp  action_server_template.cpp  service_client_template.cpp  service_server_template.cpp  topic_publisher_template.cpp  topic_subscriber_template.cpp
src/nodelets/: plugin_nodelet_topic_publisher_template.cpp  plugin_nodelet_topic_subscriber_template.cpp
